tests/rosetta/out/Go/conditional-structures-5.error
parse: error[P001]: tests/rosetta/x/Mochi/conditional-structures-5.mochi:6:5: unexpected token "else" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> tests/rosetta/x/Mochi/conditional-structures-5.mochi:6:5

  6 |   } else if b2 {
    |     ^

help:
  Check for a missing `{` or `}` to close the block.